fixed margin taking too much space and overriding each other

--- a/src/newCalendar/style.scss
+++ b/src/newCalendar/style.scss
@@ -89,10 +89,9 @@
     display: flex;
     box-sizing: border-box;
     align-items: center;
-    margin: 5px;
+    margin-top: 5px;
     color: $text-solid-color;
     height: 2em;
-    margin-right: 0;
 
     label {
       display: flex;
